[build-system]
requires = ["setuptools>=42.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pygeohash"
version = "3.1.0"
description = "Python module for interacting with geohashes"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Will McGinnis", email = "will@pedalwrencher.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
keywords = ["geohash", "gis"]
dependencies = []

[project.urls]
"Homepage" = "https://pygeohash.mcginniscommawill.com"
"Bug Tracker" = "https://github.com/wdm0006/pygeohash/issues"
"Download" = "https://github.com/wdm0006/pygeohash/tarball/3.0.1"

[tool.setuptools]
packages = ["pygeohash", "pygeohash.cgeohash"]

[tool.setuptools.package-data]
pygeohash = ["cgeohash/*.c", "cgeohash/*.h"]

[project.optional-dependencies]
viz = [
    "matplotlib>=3.5.0",
    "folium>=0.14.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.0.262",
    "tox>=4.0.0",
    "sphinx>=6.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "sphinx-rtd-dark-mode>=1.3.0",
    "sphinxcontrib-googleanalytics>=0.4",
    "build>=0.10.0",
    "twine>=4.0.0",
    "pytest-benchmark",
    "matplotlib>=3.5.0",
    "folium>=0.14.0",
    "requests>=2.28.0",
    "mypy>=1.8.0",
    "types-requests>=2.31.0",
    "types-setuptools>=69.0.0",
    "pandas",
    "pandas-stubs",
    "numpy"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "--cov=pygeohash --cov-report=term --cov-report=xml -v --log-cli-level=INFO"
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s - %(name)s - %(levelname)s - %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]

[tool.coverage.run]
source = ["pygeohash"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError",
]

[tool.ruff]
target-version = "py38"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "B"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["pygeohash"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Ignore unused imports in __init__.py files

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py38, py39, py310, py311, py312
isolated_build = True

[testenv]
# Install the package itself with the 'dev' extras
deps =
    .[dev]
commands =
    pytest {posargs:tests}
"""

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
extra_checks = true

[[tool.mypy.overrides]]
module = ["matplotlib.*", "folium.*", "numpy.*", "numba.*"]
ignore_missing_imports = true

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.1"
pytest-cov = "^3.0.0"
black = "^22.3.0"
isort = "^5.10.1"
mypy = "^0.942"
ruff = "^0.1.14"
pandas = "^2.2.0"
numpy = "^1.26.0" 